tests/ui/parallel-rustc/ice-issue-120760.stderr
error[E0670]: `async fn` is not permitted in Rust 2015
   |
LL | async fn f() {
   | ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2021` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in Rust 2015
   |
LL |     async fn save<S>(self)
   |     ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2021` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in Rust 2015
   |
LL | async fn execute<S>(dep: &str)
   | ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2021` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0261]: use of undeclared lifetime name `'a`
   |
LL | pub struct User<'dep> {
   |                 - help: consider introducing lifetime `'a` here: `'a,`
LL |     pub name: &'a str,
   |                ^^ undeclared lifetime

error[E0425]: cannot find function `run` in this scope
   |
LL |     run("dependency").await;
   |     ^^^ not found in this scope

error[E0425]: cannot find function `run` in this scope
   |
LL |         let _ = run("dependency").await;
   |                 ^^^ not found in this scope

error[E0560]: struct `User<'_>` has no field named `dep`
   |
LL |     User { dep }.save().await;
   |            ^^^ `User<'_>` does not have this field
   |
   = note: available fields are: `name`

error[E0609]: no field `await` on type `impl Future<Output = ()>`
   |
LL |     User { dep }.save().await;
   |                         ^^^^^ unknown field
   |
   = note: to `.await` a `Future`, switch to Rust 2018 or later
   = help: pass `--edition 2021` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0261, E0425, E0560, E0609, E0670.
For more information about an error, try `rustc --explain E0261`.
